fix overlapping icons issue

--- a/src/App.css
+++ b/src/App.css
@@ -155,7 +155,7 @@
   }
 }
 
-@media (min-width:426px) and (max-width: 1024px) {
+@media (min-width:426px){
   #desktop {
     display: block;
   }
